--- a/src/app/start-profile/start-profile.component.html
+++ b/src/app/start-profile/start-profile.component.html
@@ -1,16 +1,17 @@
 <app-start-header></app-start-header>
 <section class="vh-100" style="background-color: #f4f5f7;">
-    <div class="container py-5 h-100">
-      <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col col-lg-6 mb-4 mb-lg-0">
-          <div class="card mb-3" style="border-radius: .5rem;">
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col col-lg-6 mb-4 mb-lg-0">
+        <div class="card mb-3" style="border-radius: .5rem;">
+          <div>
             <div class="row g-0">
               <div class="col-md-4 gradient-custom text-center text-white"
                 style="border-top-left-radius: .5rem; border-bottom-left-radius: .5rem;">
-                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp"
-                  alt="Avatar" class="img-fluid my-5" style="width: 80px;" />
-                <h5>Marie Horwitz</h5>
-                <p>Web Designer</p>
+                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp" alt="Avatar"
+                  class="img-fluid my-5" style="width: 80px;" />
+                <h5 style="color: aqua;">{{Profile.user.name}}</h5>
+                <p style="color: aqua;">{{Profile.companyName}}</p>
                 <i class="far fa-edit mb-5"></i>
               </div>
               <div class="col-md-8">
@@ -20,29 +21,43 @@
                   <div class="row pt-1">
                     <div class="col-6 mb-3">
                       <h6>Email</h6>
-                      <p class="text-muted">info@example.com</p>
+                      <p class="text-muted">{{Profile.user.emailId}}</p>
                     </div>
                     <div class="col-6 mb-3">
                       <h6>Phone</h6>
-                      <p class="text-muted">123 456 789</p>
+                      <p class="text-muted">{{Profile.user.phone}}</p>
                     </div>
                   </div>
-                  <h6>Projects</h6>
+                  <h6>StartUp Details</h6>
                   <hr class="mt-0 mb-4">
                   <div class="row pt-1">
                     <div class="col-6 mb-3">
-                      <h6>Recent</h6>
-                      <p class="text-muted">Lorem ipsum</p>
+                      <h6>Contact</h6>
+                      <p class="text-muted">{{Profile.companyEmail}}</p>
                     </div>
                     <div class="col-6 mb-3">
-                      <h6>Most Viewed</h6>
-                      <p class="text-muted">Dolor sit amet</p>
+                      <h6>Type</h6>
+                      <p class="text-muted">{{Profile.industryType}}</p>
                     </div>
                   </div>
-                  <div class="d-flex justify-content-start">
-                    <a href="#!"><i class="fab fa-facebook-f fa-lg me-3"></i></a>
-                    <a href="#!"><i class="fab fa-twitter fa-lg me-3"></i></a>
-                    <a href="#!"><i class="fab fa-instagram fa-lg"></i></a>
+                  <div class="row pt-1">
+                    <div class="col-6 mb-3">
+                      <h6>Services</h6>
+                      <p class="text-muted">{{Profile.services}}</p>
+                    
+                  </div>
+                  <div class="row">
+                    <div class="col-6 mb-3">
+                      <h6>Description</h6>
+                      <p class="text-muted">{{Profile.description}}</p>
+                    </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-6 mb-3">
+                      <h6>Location</h6>
+                      <p class="text-muted">{{Profile.location}}</p>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -51,4 +66,5 @@
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
